tests/docblock_flow/docblock_flow.exp
Error ----------------------------------------------------------------------------------------- license_with_flow.js:4:2

Cannot cast empty string to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   license_with_flow.js:4:2
   4| ("": void); // error
       ^^ [1]

References:
   license_with_flow.js:4:6
   4| ("": void); // error
           ^^^^ [2]


Error ------------------------------------------------------------------------------------------ multiple_flows_1.js:2:4

Unexpected `@flow` declaration. Only one per file is allowed. [duplicate-flow-decl]

   2| /* @flow */
         ^^^^^


Error ------------------------------------------------------------------------------------------ multiple_flows_2.js:3:4

Unexpected `@flow` declaration. Only one per file is allowed. [duplicate-flow-decl]

   3|  * @noflow
         ^^^^^^^


Error --------------------------------------------------------------------------------- multiple_providesModule_1.js:3:4

Unexpected `@providesModule` declaration. Only one per file is allowed. [duplicate-provide-module-decl]

   3|  * @providesModule Bar
         ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- multiple_providesModule_2.js:6:4

Unexpected `@providesModule` declaration. Only one per file is allowed. [duplicate-provide-module-decl]

   6|  * @providesModule Bar
         ^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------- use_strict_with_flow.js:4:2

Cannot cast empty string to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   use_strict_with_flow.js:4:2
   4| ("": void); // error
       ^^ [1]

References:
   use_strict_with_flow.js:4:6
   4| ("": void); // error
           ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- with_flow.js:3:2

Cannot cast empty string to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   with_flow.js:3:2
   3| ("": void); // error
       ^^ [1]

References:
   with_flow.js:3:6
   3| ("": void); // error
           ^^^^ [2]



Found 7 errors
